bluec-tests/tests/invalid/types_fn_pointer/ternary_mixed_pointer_types2.c
int get_int(void) {
    return 1;
}

float get_float(void) {
    return 3.0f;
}

int main(void) {
    int (*fn)(void) = (1 > 2) ? get_int : get_float;

    return fn();
}